fix bugs on mobile

--- a/src/app/components/main/my-profile/home/home.component.scss
+++ b/src/app/components/main/my-profile/home/home.component.scss
@@ -72,6 +72,11 @@
         @include mobile {
             order: -1;
         }
+        img {
+            @include mobile {
+                width: 250px;
+            }
+        }
     }
 }
 
