--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -184,7 +184,7 @@ mat-dialog-container {
     bottom: 0;
     left: 0;
     min-width: 100%!important;
-    height: 50vh;
+    height: 70vh;
     border-radius: 25px 25px 0 0!important;
     display: flex;
     align-items: center;
